# scintillans

./: .gitignore  ChangeLog.md  LICENSE  README.md  scintillans.cabal  stack.yaml
examples/: BlockMatrixTest.hs  IntAiTest.hs  LLTest.hs  PhotonEmissionTest.hs  ProbabilityTestClassical.hs  SolverTest.hs  SynchrotronClassicalTest.hs  SynchrotronTestClassical.hs  WTest.hs  makefile
src/: Scintillans.hs  Tests.hs
src/Scintillans/: BlockMatrix.hi  BlockMatrix.hs  Probability.hs  Solver.hi  Solver.hs  Synchrotron.hi  Synchrotron.hs  SynchrotronClassical.hs
