-- Cabal documentation, see http://haskell.org/cabal/users-guide/

name:                scintillans
version:             0.2.0
license:             BSD3
license-file:        LICENSE
author:              Evgeny Nerush
maintainer:          eugene.nerush@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Scintillans.BlockMatrix
                     , Scintillans.Probability
                     , Scintillans.Solver
  build-depends:       base >=4.9
                     , repa >= 3.0
                     , vector
                     , hmatrix-special
  hs-source-dirs:      src
  default-language:    Haskell2010
